[gd_scene load_steps=10 format=2]

[ext_resource path="res://background/only front.png" type="Texture" id=1]
[ext_resource path="res://Yesss.tres" type="DynamicFont" id=2]
[ext_resource path="res://Arrow.png" type="Texture" id=3]
[ext_resource path="res://character's backshade.png" type="Texture" id=4]
[ext_resource path="res://JUMP MAN.png" type="Texture" id=5]
[ext_resource path="res://scene/Top right corner/End.gd" type="Script" id=6]
[ext_resource path="res://compass.tscn" type="PackedScene" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0.980392, 0.901961, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.180392, 0.333333, 0.054902, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.980392, 0.901961, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.180392, 0.333333, 0.054902, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 67, 60 )
script = ExtResource( 6 )

[node name="MirageBackground" type="PanelContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="Background" type="TextureRect" parent="MirageBackground"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1

[node name="Little Fairy box2" type="PanelContainer" parent="."]
modulate = Color( 1, 1, 1, 0.733333 )
margin_left = 7.0
margin_top = 4.0
margin_right = 423.0
margin_bottom = 115.0
rect_min_size = Vector2( 0, 100 )
custom_styles/panel = SubResource( 1 )

[node name="Little Fairy Text" type="Label" parent="."]
margin_left = 122.0
margin_top = 16.0
margin_right = 409.0
margin_bottom = 102.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Congratulations, you found the 
exit of the \"Life Maze.\" After my 
initial assessment, you possess 
the ability to survive in society."

[node name="Little Fairy Text2" type="Label" parent="."]
margin_left = 121.0
margin_top = 16.0
margin_right = 431.0
margin_bottom = 109.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "You can now choose to 
proceed to any level or restart 
the game."

[node name="Little Fairy Image" type="TextureRect" parent="."]
margin_left = 175.0
margin_top = -94.0
margin_right = 378.0
margin_bottom = 119.0
rect_rotation = 90.0
texture = ExtResource( 5 )
expand = true

[node name="DecisionBox" type="PanelContainer" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.733333 )
margin_left = 354.0
margin_top = 379.0
margin_right = 1002.0
margin_bottom = 586.0
rect_min_size = Vector2( 0, 80 )
size_flags_vertical = 8
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="DecisionBox"]
margin_left = 4.0
margin_top = 4.0
margin_right = 644.0
margin_bottom = 203.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="DecisionBox/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 630.0
margin_bottom = 189.0
custom_constants/separation = 8
alignment = 2

[node name="Option1" type="Button" parent="DecisionBox/MarginContainer/VBoxContainer"]
modulate = Color( 0.976471, 0.976471, 0.921569, 0.0666667 )
margin_top = 75.0
margin_right = 620.0
margin_bottom = 95.0

[node name="Option2" type="Button" parent="DecisionBox/MarginContainer/VBoxContainer"]
modulate = Color( 0.976471, 0.976471, 0.921569, 0.0666667 )
margin_top = 103.0
margin_right = 620.0
margin_bottom = 123.0

[node name="Option3" type="Button" parent="DecisionBox/MarginContainer/VBoxContainer"]
modulate = Color( 0.976471, 0.976471, 0.921569, 0.0666667 )
margin_top = 131.0
margin_right = 620.0
margin_bottom = 151.0

[node name="Option4" type="Button" parent="DecisionBox/MarginContainer/VBoxContainer"]
self_modulate = Color( 0.976471, 0.976471, 0.921569, 0.0666667 )
margin_top = 159.0
margin_right = 620.0
margin_bottom = 179.0

[node name="Question" type="Label" parent="."]
visible = false
margin_left = 372.0
margin_top = 390.0
margin_right = 986.0
margin_bottom = 457.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "My name is cheuk"

[node name="Amy" type="TextureRect" parent="."]
margin_left = -81.0
margin_top = 107.0
margin_right = 421.0
margin_bottom = 817.0
texture = ExtResource( 4 )
expand = true

[node name="Back Arrow" type="TextureButton" parent="."]
visible = false
margin_left = 475.0
margin_top = 552.0
margin_right = 579.0
margin_bottom = 656.0
rect_rotation = -90.0
texture_normal = ExtResource( 3 )
expand = true

[node name="Right Arrow" type="TextureButton" parent="."]
visible = false
margin_left = 664.0
margin_top = 472.0
margin_right = 752.0
margin_bottom = 563.0
rect_rotation = -45.0
texture_normal = ExtResource( 3 )
expand = true
flip_h = true

[node name="Front Arrow" type="TextureButton" parent="."]
visible = false
margin_left = 559.0
margin_top = 360.0
margin_right = 663.0
margin_bottom = 464.0
rect_rotation = 90.0
texture_normal = ExtResource( 3 )
expand = true

[node name="Left Arrow" type="TextureButton" parent="."]
visible = false
margin_left = 269.0
margin_top = 413.0
margin_right = 360.0
margin_bottom = 493.0
rect_rotation = 45.0
texture_normal = ExtResource( 3 )
expand = true

[node name="1" type="Button" parent="."]
margin_left = 676.0
margin_top = 436.0
margin_right = 787.0
margin_bottom = 464.0
text = "Smoke"

[node name="2" type="Button" parent="."]
margin_left = 526.0
margin_top = 435.0
margin_right = 637.0
margin_bottom = 463.0
text = "drugs"

[node name="3" type="Button" parent="."]
margin_left = 527.0
margin_top = 365.0
margin_right = 638.0
margin_bottom = 393.0
text = "alcohol"

[node name="4" type="Button" parent="."]
margin_left = 824.0
margin_top = 435.0
margin_right = 935.0
margin_bottom = 463.0
text = "sexually"

[node name="5" type="Button" parent="."]
margin_left = 676.0
margin_top = 363.0
margin_right = 787.0
margin_bottom = 391.0
rect_pivot_offset = Vector2( -166, 244 )
text = "learning"

[node name="6" type="Button" parent="."]
margin_left = 824.0
margin_top = 364.0
margin_right = 935.0
margin_bottom = 392.0
text = "game"

[node name="7" type="Button" parent="."]
margin_left = 528.0
margin_top = 298.0
margin_right = 639.0
margin_bottom = 326.0
text = "laziness"

[node name="8" type="Button" parent="."]
margin_left = 676.0
margin_top = 297.0
margin_right = 787.0
margin_bottom = 325.0
rect_pivot_offset = Vector2( -893, 307 )
text = "inertia"

[node name="9" type="Button" parent="."]
margin_left = 824.0
margin_top = 296.0
margin_right = 935.0
margin_bottom = 324.0
text = "bully"

[node name="restart" type="Button" parent="."]
margin_left = 595.0
margin_top = 497.0
margin_right = 874.0
margin_bottom = 546.0
text = "Restart"

[node name="Button" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 1024.0
margin_bottom = 602.0

[node name="Compass" parent="." instance=ExtResource( 7 )]
position = Vector2( 847, 43 )

[connection signal="pressed" from="1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="4" to="." method="_on_4_pressed"]
[connection signal="pressed" from="5" to="." method="_on_5_pressed"]
[connection signal="pressed" from="6" to="." method="_on_6_pressed"]
[connection signal="pressed" from="7" to="." method="_on_7_pressed"]
[connection signal="pressed" from="8" to="." method="_on_8_pressed"]
[connection signal="pressed" from="9" to="." method="_on_9_pressed"]
[connection signal="pressed" from="restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
